fix: icon alignment in linkgroup and language switcher

--- a/components/LanguageSwitcher/src/index.scss
+++ b/components/LanguageSwitcher/src/index.scss
@@ -54,8 +54,6 @@
     }
 
     .denhaag-link__icon .denhaag-icon {
-      align-self: var(--denhaag-link-group-link-icon-denhaag-icon-align-self);
-      padding-block-start: var(--denhaag-link-group-link-icon-denhaag-icon-padding-block-start);
       height: var(--denhaag-link-group-link-icon-denhaag-icon-height);
     }
 
