--- a/components/LinkGroup/src/index.scss
+++ b/components/LinkGroup/src/index.scss
@@ -56,8 +56,6 @@
 }
 
 .denhaag-link-group .denhaag-link__icon .denhaag-icon {
-  align-self: var(--denhaag-link-group-link-icon-denhaag-icon-align-self);
-  padding-block-start: var(--denhaag-link-group-link-icon-denhaag-icon-padding-block-start);
   height: var(--denhaag-link-group-link-icon-denhaag-icon-height);
 }
 
